# airlock

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  config.example.yaml  pyproject.toml
docs/: architecture.md  blog-post.md  configuration.md  getting-started.md  image-prompts.md  launch-kit.md  security.md
examples/: quickstart.py
src/airlock/: __init__.py  cli.py  config.py  proxy.py  rate_limiter.py  scanner.py
tests/: test_integration.py  test_rate_limiter.py  test_scanner.py
